--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Email Formatter</title>
+  <title>Email Writer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-
+  <link rel="stylesheet" href="styles.css?v=5637"> 
+  <style>
+   
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>Email Formatter</h1>
+    <h1>Email Writer</h1>
     <textarea id="requestInput" placeholder="Enter your email formatting request"></textarea>
-    <label for="shortSweetCheckbox">
-      <input type="checkbox" id="shortSweetCheckbox" checked>
-      Make it short
-    </label>
+    <div class="checkboxes">
+      <label for="toneSelect">Tone: &nbsp;</label>
+      <select id="toneSelect">
+        <option value="Professional">Professional</option>
+        <option value="Casual">Casual</option> 
+        <option value="Respectful">Respectful</option>
+        <option value="Friendly">Friendly</option>
+        <option value="Encouraging">Encouraging</option>
+        <option value="Concise" selected >Concise</option>
+        <option value="Decisive">Decisive</option>
+        <option value="Cheerful">Cheerful</option>
+      </select>
+    </div>
     <button id="submitBtn">Submit</button>
     <div id="responseOutput"></div>
     <div id="loadingIndicator" class="loader"></div>
     <button id="copyBtn">Copy</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js?v=5637"></script>
+  <script src="/608f1afb2b4af692aaecc9cc1abb3349f867630ee9ce07dc103b260c2f373b97/ns.js"></script>
 </body>
 </html>
